--- a/uhunt/assets/about.html
+++ b/uhunt/assets/about.html
@@ -23,32 +23,33 @@
 		}
 		#wrapper a {
 			text-decoration: none;
-			color: white;
-			background-color: #3498db;
-			padding: 0 2 0 2px;
+			color: #3498db;
+			font-weight: bold;
 		}
 	</style>
 </head>
 <body>
 	<div id="header">
 		<span id="app_name"><b>uHunt for Android</b></span>
-		<span>version 1.2.1</span>
+		<span>version 1.2.5</span>
 	</div>
 	<div id="wrapper">
 		The application is developed to browse &amp; think with programming problems anywhere you are. 
-		It is powered by uHunt web API and developed by <a href="http://kaidul.com">Kaidul Islam</a>, 
-		a noob programmer and currently software engineer at Eyeball Networks. I will appreciate any kind of 
-		recommendation and criticism on this app. Every suggestions or request for fetaures will be 
-		taken with highest importance. Post a feedback on 
-		<a href="https://www.facebook.com/reytz.code">Facebook page</a> 
-		or use the Feedback form.<br/><br/>
-		
-		This project is now open source and published under GNU General Public License Version 3. 
-		Feel free to <a href="https://github.com/Kaidul/uHunt_for_Android">contribute on this project at Github</a>.
+		It is powered by uHunt web API and developed by 
+		<a href="https://github.com/Kaidul/uHunt_for_Android/graphs/contributors">uHunt for Android Community</a>. 
+		We will appreciate any kind of recommendation and criticism on this app. 
+		Every suggestions or request for fetaures will be taken with highest importance. 
+		Post a feedback on <a href="https://www.facebook.com/reytz.code">Facebook page</a> 
+		or use the Feedback form.
 		<br/><br/>
 		
-		<i>The most comprehensive app for uHunt and Competitive Programming The app has most of the features in the uHunt website and integrates the exercises in the Competitive Programming book so that the user can read the problem statements on the go. It also has a new graph "Solved Problem Level" that uHunt website currently does not have. It tells the distributions of problems you have solved by difficulty level. Thanks to Kaidul Islam for your hard work on this app and make it free, just like UVa OJ and uHunt.</i> 
-		<span>- Felix Halim</span>
+		This project is now open source and published under GNU General Public License Version 3. 
+		Feel free to contact via <strong>kaidulislam90@gmail.com</strong> to join our community and 
+		<a href="https://github.com/Kaidul/uHunt_for_Android">contribute on this project at Github</a>.
+		<br/><br/>
+		
+		<i>The most comprehensive app for uHunt and Competitive Programming The app has most of the features in the uHunt website and integrates the exercises in the Competitive Programming book so that the user can read the problem statements on the go. It also has a new graph "Solved Problem Level" that uHunt website currently does not have. It tells the distributions of problems you have solved by difficulty level. Thanks to Kaidul Islam for your hard work on this app and make it free, just like UVa OJ and uHunt.
+		<span>- Felix Halim, founder of uHunt</span></i>
 		
 	</div>
 </body>
