refactor About activity to be in kotlin

--- a/uhunt/app/src/main/assets/about.html
+++ b/uhunt/app/src/main/assets/about.html
@@ -38,7 +38,7 @@
 		It is powered by uHunt web API and developed by 
 		<a href="https://github.com/Kaidul/uHunt_for_Android/graphs/contributors">uHunt for Android Community</a>. 
 		We will appreciate any kind of recommendation and criticism on this app. 
-		Every suggestions or request for fetaures will be taken with highest importance. 
+		Every suggestion or request for features will be taken with highest importance.
 		Post a feedback on <a href="https://www.facebook.com/reytz.code">Facebook page</a> 
 		or use the Feedback form.
 		<br/><br/>
